Update lists at 20240317-1800

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -195,6 +195,7 @@ deny 173.232.195.144;
 deny 173.232.195.146;
 deny 173.249.57.253;
 deny 173.255.255.215;
+deny 175.214.127.6;
 deny 176.118.193.33;
 deny 176.124.32.173;
 deny 176.126.253.190;
@@ -202,7 +203,6 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.58.89.182;
 deny 178.170.37.11;
-deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -254,11 +254,11 @@ deny 185.107.70.56;
 deny 185.113.128.30;
 deny 185.129.61.1;
 deny 185.129.61.10;
+deny 185.129.61.129;
 deny 185.129.61.2;
 deny 185.129.61.3;
 deny 185.129.61.4;
 deny 185.129.61.5;
-deny 185.129.61.6;
 deny 185.129.61.7;
 deny 185.129.61.8;
 deny 185.129.61.9;
@@ -274,7 +274,6 @@ deny 185.146.232.243;
 deny 185.14.97.37;
 deny 185.153.197.227;
 deny 185.154.110.142;
-deny 185.154.110.17;
 deny 185.165.169.239;
 deny 185.165.171.84;
 deny 185.165.190.111;
@@ -796,13 +795,13 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
+deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
 deny 2001:67c:89c:702:1ce:1ce:babe:3;
 deny 2001:67c:89c:702:1ce:1ce:babe:4;
 deny 2001:67c:89c:702:1ce:1ce:babe:5;
-deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -851,6 +850,7 @@ deny 212.69.167.80;
 deny 212.73.134.204;
 deny 212.95.50.77;
 deny 213.136.84.104;
+deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
@@ -1131,7 +1131,6 @@ deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
@@ -1539,6 +1538,7 @@ deny 37.228.129.63;
 deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
+deny 3.90.77.50;
 deny 45.120.178.198;
 deny 45.120.178.253;
 deny 45.120.178.83;
@@ -1643,7 +1643,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1668,7 +1667,6 @@ deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.39.25.229;
-deny 54.204.14.235;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1685,7 +1683,6 @@ deny 62.182.84.146;
 deny 64.227.115.78;
 deny 64.5.123.66;
 deny 66.146.193.33;
-deny 66.175.223.155;
 deny 66.220.242.222;
 deny 66.78.40.139;
 deny 67.219.109.141;
