--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -94,13 +94,13 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5524;
 deny 2001:67c:6ec:203:218:33ff:fe44:5525;
 deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
+deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
 deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
 deny 2001:67c:89c:702:1ce:1ce:babe:3;
 deny 2001:67c:89c:702:1ce:1ce:babe:4;
 deny 2001:67c:89c:702:1ce:1ce:babe:5;
-deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -293,7 +293,6 @@ deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
