--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -195,6 +195,7 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
+allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.124.32.173;
 allow 176.126.253.190;
@@ -202,7 +203,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -254,11 +254,11 @@ allow 185.107.70.56;
 allow 185.113.128.30;
 allow 185.129.61.1;
 allow 185.129.61.10;
+allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
 allow 185.129.61.5;
-allow 185.129.61.6;
 allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
@@ -274,7 +274,6 @@ allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
-allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.165.190.111;
@@ -796,13 +795,13 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
 allow 2001:67c:89c:702:1ce:1ce:babe:5;
-allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -851,6 +850,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
+allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -1131,7 +1131,6 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1539,6 +1538,7 @@ allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 3.90.77.50;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1643,7 +1643,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1668,7 +1667,6 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
-allow 54.204.14.235;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1685,7 +1683,6 @@ allow 62.182.84.146;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
-allow 66.175.223.155;
 allow 66.220.242.222;
 allow 66.78.40.139;
 allow 67.219.109.141;
