--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -94,13 +94,13 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
 allow 2001:67c:89c:702:1ce:1ce:babe:5;
-allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -293,7 +293,6 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
