--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -195,6 +195,7 @@ set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
+set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.124.32.173;
 set_real_ip_from 176.126.253.190;
@@ -202,7 +203,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
-set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
@@ -254,11 +254,11 @@ set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
+set_real_ip_from 185.129.61.129;
 set_real_ip_from 185.129.61.2;
 set_real_ip_from 185.129.61.3;
 set_real_ip_from 185.129.61.4;
 set_real_ip_from 185.129.61.5;
-set_real_ip_from 185.129.61.6;
 set_real_ip_from 185.129.61.7;
 set_real_ip_from 185.129.61.8;
 set_real_ip_from 185.129.61.9;
@@ -274,7 +274,6 @@ set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
-set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
@@ -796,13 +795,13 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
+set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -851,6 +850,7 @@ set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
+set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -1131,7 +1131,6 @@ set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
-set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1539,6 +1538,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 3.90.77.50;
 set_real_ip_from 45.120.178.198;
 set_real_ip_from 45.120.178.253;
 set_real_ip_from 45.120.178.83;
@@ -1643,7 +1643,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1668,7 +1667,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
-set_real_ip_from 54.204.14.235;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1685,7 +1683,6 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
-set_real_ip_from 66.175.223.155;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.139;
 set_real_ip_from 67.219.109.141;
