--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -203,6 +203,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
+allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -259,6 +260,7 @@ allow 185.129.61.2;
 allow 185.129.61.3;
 allow 185.129.61.4;
 allow 185.129.61.5;
+allow 185.129.61.6;
 allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
@@ -274,6 +276,7 @@ allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
+allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.165.190.111;
@@ -802,6 +805,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
 allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -810,7 +814,6 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
-allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 200.25.27.112;
 allow 202.61.226.98;
@@ -845,7 +848,6 @@ allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
-allow 212.21.66.6;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -880,12 +882,10 @@ allow 23.129.64.146;
 allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
-allow 23.129.64.210;
 allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
-allow 23.129.64.215;
 allow 23.129.64.216;
 allow 23.129.64.217;
 allow 23.129.64.218;
@@ -1094,12 +1094,10 @@ allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
-allow 2620:18c:0:192::210;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
-allow 2620:18c:0:192::215;
 allow 2620:18c:0:192::216;
 allow 2620:18c:0:192::217;
 allow 2620:18c:0:192::218;
@@ -1131,6 +1129,7 @@ allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1527,6 +1526,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 34.193.139.42;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1538,7 +1538,6 @@ allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 3.90.77.50;
 allow 45.120.178.198;
 allow 45.120.178.253;
 allow 45.120.178.83;
@@ -1734,7 +1733,6 @@ allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
-allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
