--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -203,6 +203,7 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
+set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
@@ -259,6 +260,7 @@ set_real_ip_from 185.129.61.2;
 set_real_ip_from 185.129.61.3;
 set_real_ip_from 185.129.61.4;
 set_real_ip_from 185.129.61.5;
+set_real_ip_from 185.129.61.6;
 set_real_ip_from 185.129.61.7;
 set_real_ip_from 185.129.61.8;
 set_real_ip_from 185.129.61.9;
@@ -274,6 +276,7 @@ set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
+set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
@@ -802,6 +805,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
@@ -810,7 +814,6 @@ set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
-set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
 set_real_ip_from 202.61.226.98;
@@ -845,7 +848,6 @@ set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
-set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -880,12 +882,10 @@ set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
-set_real_ip_from 23.129.64.210;
 set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
-set_real_ip_from 23.129.64.215;
 set_real_ip_from 23.129.64.216;
 set_real_ip_from 23.129.64.217;
 set_real_ip_from 23.129.64.218;
@@ -1094,12 +1094,10 @@ set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
-set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
-set_real_ip_from 2620:18c:0:192::215;
 set_real_ip_from 2620:18c:0:192::216;
 set_real_ip_from 2620:18c:0:192::217;
 set_real_ip_from 2620:18c:0:192::218;
@@ -1131,6 +1129,7 @@ set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
+set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1527,6 +1526,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.193.139.42;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1538,7 +1538,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 3.90.77.50;
 set_real_ip_from 45.120.178.198;
 set_real_ip_from 45.120.178.253;
 set_real_ip_from 45.120.178.83;
@@ -1734,7 +1733,6 @@ set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
-set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
