--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -152,7 +152,6 @@ set_real_ip_from 152.53.35.204;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -652,7 +651,6 @@ set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
-set_real_ip_from 193.35.18.105;
 set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 194.15.112.133;
@@ -814,6 +812,7 @@ set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
+set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 200.25.27.112;
 set_real_ip_from 202.61.226.98;
@@ -848,6 +847,7 @@ set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
+set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -882,10 +882,12 @@ set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.210;
 set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
+set_real_ip_from 23.129.64.215;
 set_real_ip_from 23.129.64.216;
 set_real_ip_from 23.129.64.217;
 set_real_ip_from 23.129.64.218;
@@ -1094,10 +1096,12 @@ set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
+set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
 set_real_ip_from 2620:18c:0:192::216;
 set_real_ip_from 2620:18c:0:192::217;
 set_real_ip_from 2620:18c:0:192::218;
@@ -1526,7 +1530,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.193.139.42;
+set_real_ip_from 3.219.36.147;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1682,10 +1686,10 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
+set_real_ip_from 66.175.223.155;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.139;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 70.53.133.193;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.167.47.69;
@@ -1733,6 +1737,7 @@ set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
+set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
