--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -152,6 +152,7 @@ allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -539,7 +540,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.29.9.156;
 allow 185.29.9.157;
-allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
@@ -629,7 +629,6 @@ allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.109.120.143;
 allow 193.109.120.160;
-allow 193.163.170.149;
 allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -651,6 +650,7 @@ allow 193.239.232.102;
 allow 193.239.232.230;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.35.18.105;
 allow 193.35.18.49;
 allow 193.35.18.77;
 allow 194.15.112.133;
@@ -730,6 +730,10 @@ allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
+allow 2001:678:e3c::a;
+allow 2001:678:e3c::b;
+allow 2001:678:e3c::c;
+allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -1136,7 +1140,6 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:c010:8fb::bee;
@@ -1530,7 +1533,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.219.36.147;
+allow 3.221.188.185;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1579,6 +1582,10 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.144.29.134;
+allow 45.151.167.10;
+allow 45.151.167.11;
+allow 45.151.167.12;
+allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
@@ -1646,6 +1653,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
