--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -28,6 +28,10 @@ allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
+allow 2001:678:e3c::a;
+allow 2001:678:e3c::b;
+allow 2001:678:e3c::c;
+allow 2001:678:e3c::d;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -297,7 +301,6 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:c010:8fb::bee;
