--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -28,6 +28,10 @@ deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
+deny 2001:678:e3c::a;
+deny 2001:678:e3c::b;
+deny 2001:678:e3c::c;
+deny 2001:678:e3c::d;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
@@ -297,7 +301,6 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
-deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:c010:8fb::bee;
