--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -73,6 +73,7 @@ allow 107.189.31.232;
 allow 107.189.31.33;
 allow 107.189.4.12;
 allow 107.189.4.209;
+allow 107.189.4.76;
 allow 107.189.5.121;
 allow 107.189.5.7;
 allow 107.189.5.80;
@@ -540,6 +541,7 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.29.9.156;
 allow 185.29.9.157;
+allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
@@ -952,6 +954,10 @@ allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
+allow 2.57.122.179;
+allow 2.57.122.215;
+allow 2.57.122.246;
+allow 2.57.122.58;
 allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
@@ -1140,6 +1146,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:c010:8fb::bee;
@@ -1533,7 +1540,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.221.188.185;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1623,7 +1629,7 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.215.24;
+allow 46.195.215.41;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1667,6 +1673,7 @@ allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
+allow 52.55.168.45;
 allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
@@ -1730,7 +1737,6 @@ allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
