--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -73,6 +73,7 @@ deny 107.189.31.232;
 deny 107.189.31.33;
 deny 107.189.4.12;
 deny 107.189.4.209;
+deny 107.189.4.76;
 deny 107.189.5.121;
 deny 107.189.5.7;
 deny 107.189.5.80;
@@ -540,6 +541,7 @@ deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.29.9.156;
 deny 185.29.9.157;
+deny 185.34.33.2;
 deny 185.35.202.222;
 deny 185.38.175.133;
 deny 185.39.207.83;
@@ -952,6 +954,10 @@ deny 23.94.211.25;
 deny 23.94.36.142;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
+deny 2.57.122.179;
+deny 2.57.122.215;
+deny 2.57.122.246;
+deny 2.57.122.58;
 deny 2.58.56.220;
 deny 2.58.56.248;
 deny 2.58.56.43;
@@ -1140,6 +1146,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:c010:8fb::bee;
@@ -1533,7 +1540,6 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
-deny 3.221.188.185;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1623,7 +1629,7 @@ deny 45.95.169.255;
 deny 46.166.139.111;
 deny 46.182.21.248;
 deny 46.182.21.250;
-deny 46.195.215.24;
+deny 46.195.215.41;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1667,6 +1673,7 @@ deny 5.255.124.150;
 deny 5.255.125.196;
 deny 5.255.125.41;
 deny 5.255.127.222;
+deny 52.55.168.45;
 deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.198;
@@ -1730,7 +1737,6 @@ deny 80.78.24.207;
 deny 80.82.78.14;
 deny 81.16.33.42;
 deny 81.17.28.95;
-deny 81.64.1.143;
 deny 82.118.242.158;
 deny 82.153.138.120;
 deny 82.153.138.153;
