--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -301,6 +301,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:c010:8fb::bee;
