--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -73,6 +73,7 @@ set_real_ip_from 107.189.31.232;
 set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
+set_real_ip_from 107.189.4.76;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.5.80;
@@ -540,6 +541,7 @@ set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.29.9.156;
 set_real_ip_from 185.29.9.157;
+set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
 set_real_ip_from 185.39.207.83;
@@ -952,6 +954,10 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2.57.122.179;
+set_real_ip_from 2.57.122.215;
+set_real_ip_from 2.57.122.246;
+set_real_ip_from 2.57.122.58;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.43;
@@ -1140,6 +1146,7 @@ set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:73::d735;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:2017:1::169;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f9:c010:8fb::bee;
@@ -1533,7 +1540,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.221.188.185;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1623,7 +1629,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.182.21.250;
-set_real_ip_from 46.195.215.24;
+set_real_ip_from 46.195.215.41;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1667,6 +1673,7 @@ set_real_ip_from 5.255.124.150;
 set_real_ip_from 5.255.125.196;
 set_real_ip_from 5.255.125.41;
 set_real_ip_from 5.255.127.222;
+set_real_ip_from 52.55.168.45;
 set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.198;
@@ -1730,7 +1737,6 @@ set_real_ip_from 80.78.24.207;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
