--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -90,6 +90,7 @@ allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 108.181.27.205;
+allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.169.33.163;
 allow 109.201.133.100;
@@ -123,10 +124,6 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
-allow 141.98.168.147;
-allow 141.98.168.148;
-allow 141.98.168.157;
-allow 141.98.168.161;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 143.42.110.237;
@@ -137,9 +134,6 @@ allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
-allow 146.19.143.122;
-allow 146.19.143.52;
-allow 146.19.143.58;
 allow 146.59.234.220;
 allow 146.59.35.246;
 allow 146.59.35.38;
@@ -169,7 +163,6 @@ allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
-allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 170.187.228.128;
@@ -197,12 +190,12 @@ allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.124.32.173;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -248,7 +241,6 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
-allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -628,8 +620,6 @@ allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.109.120.143;
-allow 193.109.120.160;
 allow 193.168.141.245;
 allow 193.189.100.194;
 allow 193.189.100.195;
@@ -888,7 +878,6 @@ allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.210;
-allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
@@ -943,7 +932,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.184.48.101;
@@ -1106,7 +1094,6 @@ allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
-allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
@@ -1143,6 +1130,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1508,14 +1496,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a10:1fc0:1::1ec2:efbe;
-allow 2a10:1fc0:1::6017:3c35;
-allow 2a10:1fc0:1::7895:f9ac;
-allow 2a10:1fc0:1::b087:a0ce;
-allow 2a10:1fc0:1::b81d:9391;
-allow 2a10:1fc0:1::c0c7:2c7;
-allow 2a10:1fc0:1::ef6b:36d;
-allow 2a10:1fc0:1::fed5:16e7;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1537,6 +1517,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
+allow 3.209.115.158;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1548,12 +1529,8 @@ allow 37.228.129.63;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 45.120.178.198;
-allow 45.120.178.253;
-allow 45.120.178.83;
 allow 45.12.3.80;
 allow 45.128.232.151;
-allow 45.129.199.22;
 allow 45.130.20.250;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1584,7 +1561,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.144.29.134;
 allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
@@ -1605,10 +1581,8 @@ allow 45.79.50.161;
 allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.123;
-allow 45.8.147.17;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.87.154.151;
 allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
@@ -1643,8 +1617,6 @@ allow 51.222.142.67;
 allow 51.222.84.46;
 allow 51.38.113.118;
 allow 51.38.81.135;
-allow 51.75.175.24;
-allow 51.75.175.25;
 allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
@@ -1655,7 +1627,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.20.10.227;
 allow 5.22.159.135;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1706,9 +1677,6 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
-allow 74.119.195.235;
-allow 74.119.195.4;
-allow 74.119.195.92;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
@@ -1718,8 +1686,6 @@ allow 77.232.143.243;
 allow 77.232.143.248;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.91.122.149;
-allow 77.91.123.97;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
@@ -1806,7 +1772,6 @@ allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
-allow 91.235.234.209;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.205.129.119;
@@ -1859,15 +1824,6 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.22.4;
-allow 95.164.33.20;
-allow 95.164.33.22;
-allow 95.164.33.23;
-allow 95.164.33.25;
-allow 95.164.33.26;
-allow 95.164.33.37;
-allow 95.164.33.42;
-allow 95.164.33.46;
-allow 95.164.33.47;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
