--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -263,7 +263,6 @@ deny 2620:18c:0:192::147;
 deny 2620:18c:0:192::148;
 deny 2620:18c:0:192::149;
 deny 2620:18c:0:192::210;
-deny 2620:18c:0:192::211;
 deny 2620:18c:0:192::212;
 deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
@@ -299,6 +298,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::d735;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
@@ -664,14 +664,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a10:1fc0:1::1ec2:efbe;
-deny 2a10:1fc0:1::6017:3c35;
-deny 2a10:1fc0:1::7895:f9ac;
-deny 2a10:1fc0:1::b087:a0ce;
-deny 2a10:1fc0:1::b81d:9391;
-deny 2a10:1fc0:1::c0c7:2c7;
-deny 2a10:1fc0:1::ef6b:36d;
-deny 2a10:1fc0:1::fed5:16e7;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
