Update lists at 20240318-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -157,7 +157,6 @@ allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -263,6 +262,7 @@ allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
+allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
@@ -422,11 +422,9 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
-allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
-allow 2a05:b0c7:6c6d::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
