--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -92,6 +92,7 @@ allow 107.189.8.65;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
+allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.201.133.100;
 allow 109.69.67.17;
@@ -163,6 +164,7 @@ allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 170.187.228.128;
@@ -241,6 +243,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.70.56;
@@ -677,7 +680,6 @@ allow 198.98.48.33;
 allow 198.98.49.203;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
@@ -878,6 +880,7 @@ allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.210;
+allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
@@ -932,6 +935,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.184.48.101;
@@ -988,7 +992,6 @@ allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1094,6 +1097,7 @@ allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
+allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
@@ -1254,11 +1258,9 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
-allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
-allow 2a05:b0c7:6c6d::1;
 allow 2a05:b0c7:6cd8::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1517,7 +1519,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.209.115.158;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1700,7 +1701,6 @@ allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1794,11 +1794,9 @@ allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.103.124.101;
 allow 94.103.124.107;
-allow 94.103.124.112;
 allow 94.103.124.121;
 allow 94.103.124.46;
 allow 94.103.124.90;
-allow 94.103.124.91;
 allow 94.103.124.98;
 allow 94.131.110.58;
 allow 94.140.115.63;
@@ -1810,7 +1808,6 @@ allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
 allow 94.177.106.37;
-allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
