--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -92,6 +92,7 @@ set_real_ip_from 107.189.8.65;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
+set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.201.133.100;
 set_real_ip_from 109.69.67.17;
@@ -163,6 +164,7 @@ set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.213.212;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
+set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
 set_real_ip_from 170.187.228.128;
@@ -241,6 +243,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
@@ -677,7 +680,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
@@ -878,6 +880,7 @@ set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.210;
+set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
@@ -932,6 +935,7 @@ set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
+set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
@@ -988,7 +992,6 @@ set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1094,6 +1097,7 @@ set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
+set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
@@ -1254,11 +1258,9 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
-set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
-set_real_ip_from 2a05:b0c7:6c6d::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1517,7 +1519,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.209.115.158;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1700,7 +1701,6 @@ set_real_ip_from 80.78.24.207;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1794,11 +1794,9 @@ set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.103.124.101;
 set_real_ip_from 94.103.124.107;
-set_real_ip_from 94.103.124.112;
 set_real_ip_from 94.103.124.121;
 set_real_ip_from 94.103.124.46;
 set_real_ip_from 94.103.124.90;
-set_real_ip_from 94.103.124.91;
 set_real_ip_from 94.103.124.98;
 set_real_ip_from 94.131.110.58;
 set_real_ip_from 94.140.115.63;
@@ -1810,7 +1808,6 @@ set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
-set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
