--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -157,6 +157,7 @@ allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -560,7 +561,6 @@ allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
-allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
 allow 2a0b:f4c2:2::45;
