--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -157,6 +157,7 @@ deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
 deny 2605:6400:10:16e:e9da:a184:bfe1:e727;
+deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:4ed:1:1:1:1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -560,7 +561,6 @@ deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
-deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
