--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -193,6 +193,7 @@ set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
+set_real_ip_from 176.180.139.234;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
@@ -431,7 +432,6 @@ set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
-set_real_ip_from 185.220.101.42;
 set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
@@ -533,8 +533,6 @@ set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
-set_real_ip_from 185.29.9.156;
-set_real_ip_from 185.29.9.157;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
@@ -558,7 +556,6 @@ set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
 set_real_ip_from 189.147.152.101;
 set_real_ip_from 190.103.179.98;
-set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 191.101.31.57;
 set_real_ip_from 191.252.92.147;
@@ -680,6 +677,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
@@ -992,6 +990,7 @@ set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1396,7 +1395,6 @@ set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
-set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
@@ -1519,6 +1517,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 3.227.165.174;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1530,6 +1529,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
@@ -1630,7 +1630,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.22.159.135;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1662,6 +1661,7 @@ set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
 set_real_ip_from 5.42.80.235;
 set_real_ip_from 54.36.101.21;
+set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
@@ -1701,6 +1701,7 @@ set_real_ip_from 80.78.24.207;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1808,6 +1809,7 @@ set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
+set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
