Update lists at 20240319-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -561,9 +561,9 @@ deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
+deny 2a0b:f4c2:2::42;
 deny 2a0b:f4c2:2::43;
 deny 2a0b:f4c2:2::44;
-deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
 deny 2a0b:f4c2:2::48;
@@ -661,6 +661,7 @@ deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
+deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
