--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -193,7 +193,6 @@ allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
-allow 176.180.139.234;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
@@ -432,9 +431,9 @@ allow 185.220.101.39;
 allow 185.220.101.4;
 allow 185.220.101.40;
 allow 185.220.101.41;
+allow 185.220.101.42;
 allow 185.220.101.43;
 allow 185.220.101.44;
-allow 185.220.101.45;
 allow 185.220.101.46;
 allow 185.220.101.47;
 allow 185.220.101.48;
@@ -556,6 +555,7 @@ allow 188.68.49.235;
 allow 188.68.52.231;
 allow 189.147.152.101;
 allow 190.103.179.98;
+allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.101.31.57;
 allow 191.252.92.147;
@@ -634,6 +634,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
@@ -1395,9 +1396,9 @@ allow 2a0b:f4c2:2::39;
 allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
+allow 2a0b:f4c2:2::42;
 allow 2a0b:f4c2:2::43;
 allow 2a0b:f4c2:2::44;
-allow 2a0b:f4c2:2::45;
 allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
@@ -1495,6 +1496,7 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
+allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
@@ -1517,7 +1519,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.227.165.174;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1530,6 +1531,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.212.195.195;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1701,7 +1703,6 @@ allow 80.78.24.207;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
