--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -427,6 +427,7 @@ set_real_ip_from 185.220.101.38;
 set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
+set_real_ip_from 185.220.101.41;
 set_real_ip_from 185.220.101.42;
 set_real_ip_from 185.220.101.43;
 set_real_ip_from 185.220.101.44;
@@ -434,7 +435,6 @@ set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
 set_real_ip_from 185.220.101.48;
-set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
 set_real_ip_from 185.220.101.50;
 set_real_ip_from 185.220.101.51;
@@ -494,7 +494,6 @@ set_real_ip_from 185.220.103.9;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
-set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.239.71.160;
@@ -523,6 +522,7 @@ set_real_ip_from 185.246.128.161;
 set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.67;
 set_real_ip_from 185.246.188.73;
+set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
@@ -698,6 +698,7 @@ set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:2:9161::1;
+set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
 set_real_ip_from 2001:41d0:601:1100::108e;
@@ -1268,6 +1269,8 @@ set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
+set_real_ip_from 2a06:1700:3:19::1;
+set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
@@ -1387,6 +1390,7 @@ set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
+set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
 set_real_ip_from 2a0b:f4c2:2::43;
 set_real_ip_from 2a0b:f4c2:2::44;
@@ -1394,7 +1398,6 @@ set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
-set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
@@ -1511,6 +1514,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.198.83.242;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1619,7 +1623,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.21.249.128;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
