--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
-deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -109,6 +108,7 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
+deny 118.163.74.160;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.127.180.156;
@@ -127,6 +127,7 @@ deny 143.110.156.176;
 deny 143.42.110.237;
 deny 143.42.199.223;
 deny 144.172.118.4;
+deny 144.172.118.57;
 deny 144.172.73.11;
 deny 144.172.73.6;
 deny 144.217.80.80;
@@ -799,6 +800,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -930,7 +932,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -951,7 +952,6 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -1471,6 +1471,8 @@ deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
 deny 2a0e:d602:1:14bc::2;
+deny 2a0e:d602:2:2a2::2;
+deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
 deny 2a0f:93c1:26:1f2::9ce5;
@@ -1497,6 +1499,11 @@ deny 2a12:5940:13e2::2;
 deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
+deny 2a12:5940:b4db::2;
+deny 2a12:5940:b4dd::2;
+deny 2a12:5940:c80b::2;
+deny 2a12:5940:c814::2;
+deny 2a12:5940:c826::2;
 deny 2a12:5940:d0e2::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
@@ -1505,7 +1512,6 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
-deny 3.213.29.247;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1518,6 +1524,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 44.221.39.147;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.130.20.250;
@@ -1616,6 +1623,7 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.190;
@@ -1641,7 +1649,9 @@ deny 5.2.79.190;
 deny 5.39.25.229;
 deny 54.224.79.94;
 deny 5.42.66.6;
+deny 5.42.80.232;
 deny 5.42.80.233;
+deny 5.42.80.234;
 deny 5.42.80.235;
 deny 54.36.101.21;
 deny 5.45.102.93;
@@ -1663,9 +1673,13 @@ deny 74.207.248.172;
 deny 74.82.47.194;
 deny 77.105.146.42;
 deny 77.220.196.253;
+deny 77.232.143.243;
+deny 77.232.143.248;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 77.91.85.147;
+deny 77.91.86.95;
+deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.124.8.241;
 deny 79.137.198.213;
@@ -1789,6 +1803,7 @@ deny 94.177.106.46;
 deny 94.177.106.54;
 deny 94.177.106.55;
 deny 94.177.106.59;
+deny 94.228.163.25;
 deny 94.228.169.70;
 deny 94.230.208.147;
 deny 94.230.208.148;
