--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,7 +66,6 @@ allow 107.189.29.103;
 allow 107.189.30.236;
 allow 107.189.30.69;
 allow 107.189.30.86;
-allow 107.189.3.11;
 allow 107.189.31.134;
 allow 107.189.31.225;
 allow 107.189.31.232;
@@ -120,6 +119,7 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.128.222.68;
+allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
 allow 141.98.11.62;
@@ -187,7 +187,6 @@ allow 173.232.195.144;
 allow 173.232.195.146;
 allow 173.249.57.253;
 allow 173.255.255.215;
-allow 174.129.90.101;
 allow 175.214.127.6;
 allow 176.118.193.33;
 allow 176.121.81.51;
@@ -493,6 +492,7 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
+allow 185.222.66.188;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
@@ -934,6 +934,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -954,6 +955,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1017,7 +1019,6 @@ allow 2605:6400:30:ed65:a5f1:548c:47c3:6185;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:ef95:daa6:bd3c:c413:da7e;
-allow 2605:6400:30:efb2::;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1473,6 +1474,8 @@ allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
 allow 2a0e:d602:1:14bc::2;
+allow 2a0e:d602:2:2a2::2;
+allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
 allow 2a0f:93c1:26:1f2::9ce5;
@@ -1497,7 +1500,13 @@ allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
+allow 2a12:5940:52c2::2;
 allow 2a12:5940:9101::2;
+allow 2a12:5940:b4db::2;
+allow 2a12:5940:b4dd::2;
+allow 2a12:5940:c80b::2;
+allow 2a12:5940:c814::2;
+allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
@@ -1505,7 +1514,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
-allow 31.220.98.139;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1518,6 +1526,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 3.94.176.0;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1641,7 +1650,9 @@ allow 5.2.79.190;
 allow 5.39.25.229;
 allow 54.224.79.94;
 allow 5.42.66.6;
+allow 5.42.80.232;
 allow 5.42.80.233;
+allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 5.45.102.93;
@@ -1664,9 +1675,13 @@ allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.232.143.243;
+allow 77.232.143.248;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.85.147;
+allow 77.91.86.95;
+allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.170.62;
 allow 79.124.8.241;
@@ -1689,7 +1704,6 @@ allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1791,6 +1805,8 @@ allow 94.177.106.46;
 allow 94.177.106.54;
 allow 94.177.106.55;
 allow 94.177.106.59;
+allow 94.228.163.25;
+allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
@@ -1798,7 +1814,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.164.22.4;
 allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
