--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -11,6 +11,7 @@ set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
+set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.192.1.138;
@@ -51,7 +52,6 @@ set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.11.80;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.13.180;
-set_real_ip_from 107.189.13.251;
 set_real_ip_from 107.189.13.253;
 set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
@@ -281,6 +281,8 @@ set_real_ip_from 185.181.61.18;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
+set_real_ip_from 185.193.127.76;
+set_real_ip_from 185.193.127.88;
 set_real_ip_from 185.193.158.134;
 set_real_ip_from 185.193.52.180;
 set_real_ip_from 185.195.237.238;
@@ -628,7 +630,6 @@ set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
-set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.182;
@@ -815,7 +816,6 @@ set_real_ip_from 204.137.14.105;
 set_real_ip_from 204.137.14.106;
 set_real_ip_from 204.137.14.92;
 set_real_ip_from 204.194.29.4;
-set_real_ip_from 204.48.25.20;
 set_real_ip_from 204.8.156.142;
 set_real_ip_from 204.85.191.7;
 set_real_ip_from 204.85.191.8;
@@ -828,7 +828,6 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
-set_real_ip_from 207.188.137.158;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.32.198;
@@ -879,7 +878,6 @@ set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.210;
 set_real_ip_from 23.129.64.211;
-set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
 set_real_ip_from 23.129.64.215;
@@ -891,6 +889,7 @@ set_real_ip_from 23.129.64.220;
 set_real_ip_from 23.129.64.221;
 set_real_ip_from 23.129.64.222;
 set_real_ip_from 23.129.64.223;
+set_real_ip_from 23.129.64.224;
 set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.226;
 set_real_ip_from 23.129.64.227;
@@ -979,7 +978,6 @@ set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
-set_real_ip_from 2604:a880:400:d0::148f:2001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1092,7 +1090,6 @@ set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::215;
@@ -1104,6 +1101,7 @@ set_real_ip_from 2620:18c:0:192::220;
 set_real_ip_from 2620:18c:0:192::221;
 set_real_ip_from 2620:18c:0:192::222;
 set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
 set_real_ip_from 2620:18c:0:192::225;
 set_real_ip_from 2620:18c:0:192::226;
 set_real_ip_from 2620:18c:0:192::227;
@@ -1276,7 +1274,11 @@ set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
+set_real_ip_from 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
+set_real_ip_from 2a0a:3840:1337:127:0:b9c1:7f58:1337;
 set_real_ip_from 2a0a:3840:8078:24:0:504e:18cf:1337;
+set_real_ip_from 2a0a:3840:8078:25:0:504e:1921:1337;
+set_real_ip_from 2a0a:3840:8078:27:0:504e:1b6c:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -1488,7 +1490,6 @@ set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
-set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
@@ -1622,6 +1623,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.21.193.128;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
@@ -1643,7 +1645,6 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
-set_real_ip_from 52.72.27.39;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
@@ -1686,11 +1687,12 @@ set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.102.170.62;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
-set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.78.24.207;
+set_real_ip_from 80.78.25.33;
+set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
@@ -1767,6 +1769,7 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
+set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
 set_real_ip_from 92.205.163.226;
 set_real_ip_from 92.205.185.52;
