--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -149,7 +149,6 @@ set_real_ip_from 2603:3:610c:7640::;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
-set_real_ip_from 2604:a880:400:d0::148f:2001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -262,7 +261,6 @@ set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
 set_real_ip_from 2620:18c:0:192::215;
@@ -274,6 +272,7 @@ set_real_ip_from 2620:18c:0:192::220;
 set_real_ip_from 2620:18c:0:192::221;
 set_real_ip_from 2620:18c:0:192::222;
 set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
 set_real_ip_from 2620:18c:0:192::225;
 set_real_ip_from 2620:18c:0:192::226;
 set_real_ip_from 2620:18c:0:192::227;
@@ -445,7 +444,11 @@ set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
+set_real_ip_from 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
+set_real_ip_from 2a0a:3840:1337:127:0:b9c1:7f58:1337;
 set_real_ip_from 2a0a:3840:8078:24:0:504e:18cf:1337;
+set_real_ip_from 2a0a:3840:8078:25:0:504e:1921:1337;
+set_real_ip_from 2a0a:3840:8078:27:0:504e:1b6c:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
@@ -657,7 +660,6 @@ set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
-set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
