Update lists at 20240321-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,7 +111,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -141,7 +140,6 @@ allow 146.59.35.38;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
-allow 151.80.148.159;
 allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
@@ -195,6 +193,7 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 178.170.37.11;
 allow 178.17.170.184;
 allow 178.17.170.23;
@@ -235,7 +234,6 @@ allow 185.100.85.22;
 allow 185.100.85.23;
 allow 185.100.85.24;
 allow 185.100.85.25;
-allow 185.100.86.128;
 allow 185.100.87.136;
 allow 185.100.87.139;
 allow 185.100.87.174;
@@ -636,7 +634,6 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
-allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.239.232.102;
@@ -703,7 +700,6 @@ allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
-allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:700:10a2::;
@@ -713,8 +709,8 @@ allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
-allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
+allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -805,7 +801,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -871,7 +866,6 @@ allow 23.129.64.138;
 allow 23.129.64.139;
 allow 23.129.64.140;
 allow 23.129.64.141;
-allow 23.129.64.142;
 allow 23.129.64.143;
 allow 23.129.64.144;
 allow 23.129.64.145;
@@ -1060,6 +1054,7 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
+allow 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 allow 2605:6400:30:fdd8::2;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
@@ -1082,7 +1077,6 @@ allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
 allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
-allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
@@ -1135,6 +1129,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:2017:1::169;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:c010:8fb::bee;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1177,6 +1172,7 @@ allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
+allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -1282,6 +1278,7 @@ allow 2a0a:3840:8078:25:0:504e:1921:1337;
 allow 2a0a:3840:8078:27:0:504e:1b6c:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
+allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1494,7 +1491,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
-allow 2a0f:e586:f:f::182;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1516,12 +1512,11 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.223.219.32;
 allow 35.0.127.52;
 allow 37.1.201.144;
+allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.120.239.59;
-allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
 allow 37.252.255.135;
@@ -1582,6 +1577,7 @@ allow 45.80.158.27;
 allow 45.80.208.123;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.31.10;
 allow 45.9.148.219;
 allow 45.9.150.103;
 allow 45.9.150.130;
@@ -1613,6 +1609,7 @@ allow 51.159.211.57;
 allow 51.195.91.124;
 allow 51.222.142.67;
 allow 51.222.84.46;
+allow 5.135.174.213;
 allow 51.38.113.118;
 allow 51.38.81.135;
 allow 51.75.64.23;
@@ -1623,6 +1620,7 @@ allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
 allow 51.91.18.151;
+allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
@@ -1634,7 +1632,6 @@ allow 5.255.111.64;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.244;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
@@ -1649,6 +1646,7 @@ allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
+allow 54.198.226.31;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1698,7 +1696,6 @@ allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1754,6 +1751,7 @@ allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 89.58.41.251;
+allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
@@ -1788,6 +1786,7 @@ allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.99.104.128;
+allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.103.124.101;
