--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,7 +9,6 @@ deny 2001:1b60:3:239:1003:106:0:1;
 deny 2001:40e8:0:f090::100;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::9dce;
-deny 2001:41d0:401:3200::3efd;
 deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
 deny 2001:41d0:700:10a2::;
@@ -19,8 +18,8 @@ deny 2001:41d0:701:1100::4434;
 deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
-deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
+deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
@@ -111,7 +110,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -228,6 +226,7 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
+deny 2605:6400:30:fcd3:1a37:db42:4822:2fc5;
 deny 2605:6400:30:fdd8::2;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
@@ -250,7 +249,6 @@ deny 2620:18c:0:192::138;
 deny 2620:18c:0:192::139;
 deny 2620:18c:0:192::140;
 deny 2620:18c:0:192::141;
-deny 2620:18c:0:192::142;
 deny 2620:18c:0:192::143;
 deny 2620:18c:0:192::144;
 deny 2620:18c:0:192::145;
@@ -302,6 +300,7 @@ deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:2017:1::169;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:c010:8fb::bee;
+deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
@@ -344,6 +343,7 @@ deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 deny 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 deny 2a03:4000:62:8:c855:23ff:fef6:50ee;
+deny 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
@@ -449,6 +449,7 @@ deny 2a0a:3840:8078:25:0:504e:1921:1337;
 deny 2a0a:3840:8078:27:0:504e:1b6c:1337;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:100:5b:64b9:56ff:fe85:2a11;
+deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -661,7 +662,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
-deny 2a0f:e586:f:f::182;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
