Update lists at 20240323-1800

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,7 +101,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
-allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -327,7 +326,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -409,6 +407,7 @@ allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:114:394f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
