--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -186,7 +186,6 @@ allow 172.81.131.84;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
-allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
@@ -226,7 +225,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 184.105.48.40;
-allow 184.75.221.163;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -244,7 +242,6 @@ allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.113.128.30;
 allow 185.129.61.1;
-allow 185.129.61.10;
 allow 185.129.61.129;
 allow 185.129.61.2;
 allow 185.129.61.3;
@@ -792,7 +789,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
-allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -945,6 +941,7 @@ allow 23.184.48.222;
 allow 23.184.48.223;
 allow 23.184.48.224;
 allow 23.184.48.94;
+allow 23.21.1.140;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1164,7 +1161,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1246,6 +1242,7 @@ allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:114:394f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
@@ -1539,7 +1536,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.195.193.12;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1655,17 +1651,21 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.151;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
+allow 5.255.101.79;
 allow 5.255.102.20;
 allow 5.255.103.190;
 allow 5.255.103.235;
+allow 5.255.105.181;
+allow 5.255.109.75;
 allow 5.255.111.64;
 allow 5.255.112.5;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.119.87;
+allow 5.255.120.20;
 allow 5.255.121.189;
 allow 5.255.124.150;
 allow 5.255.125.196;
@@ -1680,6 +1680,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
 allow 54.224.79.94;
@@ -1731,6 +1732,7 @@ allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
@@ -1812,6 +1814,7 @@ allow 92.205.185.52;
 allow 92.205.31.137;
 allow 92.243.24.163;
 allow 92.246.84.133;
+allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.243.56.177;
 allow 93.90.74.31;
