--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -186,7 +186,6 @@ set_real_ip_from 172.81.131.84;
 set_real_ip_from 173.232.195.137;
 set_real_ip_from 173.232.195.144;
 set_real_ip_from 173.232.195.146;
-set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
@@ -226,7 +225,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 184.105.48.40;
-set_real_ip_from 184.75.221.163;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -244,7 +242,6 @@ set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.129.61.1;
-set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
 set_real_ip_from 185.129.61.2;
 set_real_ip_from 185.129.61.3;
@@ -792,7 +789,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:89c:666::1;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
-set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -945,6 +941,7 @@ set_real_ip_from 23.184.48.222;
 set_real_ip_from 23.184.48.223;
 set_real_ip_from 23.184.48.224;
 set_real_ip_from 23.184.48.94;
+set_real_ip_from 23.21.1.140;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1164,7 +1161,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:c207:3006:6498::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1246,6 +1242,7 @@ set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
+set_real_ip_from 2a04:52c0:114:394f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:120:a13d::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
@@ -1539,7 +1536,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.195.193.12;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1655,17 +1651,21 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.151;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
+set_real_ip_from 5.255.101.79;
 set_real_ip_from 5.255.102.20;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
+set_real_ip_from 5.255.105.181;
+set_real_ip_from 5.255.109.75;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.112.5;
 set_real_ip_from 5.255.115.42;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
+set_real_ip_from 5.255.119.87;
+set_real_ip_from 5.255.120.20;
 set_real_ip_from 5.255.121.189;
 set_real_ip_from 5.255.124.150;
 set_real_ip_from 5.255.125.196;
@@ -1680,6 +1680,7 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
 set_real_ip_from 54.224.79.94;
@@ -1731,6 +1732,7 @@ set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1812,6 +1814,7 @@ set_real_ip_from 92.205.185.52;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
+set_real_ip_from 92.249.48.135;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.243.56.177;
 set_real_ip_from 93.90.74.31;
