Update lists at 20240323-2100

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -90,7 +90,6 @@ allow 2001:67c:6ec:203:192:42:116:220;
 allow 2001:67c:6ec:203:192:42:116:221;
 allow 2001:67c:6ec:203:218:33ff:fe44:5513;
 allow 2001:67c:6ec:203:218:33ff:fe44:5514;
-allow 2001:67c:6ec:203:218:33ff:fe44:5515;
 allow 2001:67c:6ec:203:218:33ff:fe44:5517;
 allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
@@ -101,6 +100,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:89c:666::1;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
 allow 2001:67c:89c:702:1ce:1ce:babe:3;
 allow 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -326,9 +326,9 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
-allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
