--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -90,7 +90,6 @@ deny 2001:67c:6ec:203:192:42:116:220;
 deny 2001:67c:6ec:203:192:42:116:221;
 deny 2001:67c:6ec:203:218:33ff:fe44:5513;
 deny 2001:67c:6ec:203:218:33ff:fe44:5514;
-deny 2001:67c:6ec:203:218:33ff:fe44:5515;
 deny 2001:67c:6ec:203:218:33ff:fe44:5517;
 deny 2001:67c:6ec:203:218:33ff:fe44:5518;
 deny 2001:67c:6ec:203:218:33ff:fe44:5520;
@@ -101,6 +100,7 @@ deny 2001:67c:6ec:203:218:33ff:fe44:5526;
 deny 2001:67c:6ec:203:218:33ff:fe44:5527;
 deny 2001:67c:89c:666::1;
 deny 2001:67c:89c:702:1ce:1ce:babe:1;
+deny 2001:67c:89c:702:1ce:1ce:babe:10;
 deny 2001:67c:89c:702:1ce:1ce:babe:2;
 deny 2001:67c:89c:702:1ce:1ce:babe:3;
 deny 2001:67c:89c:702:1ce:1ce:babe:4;
@@ -326,9 +326,9 @@ deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
+deny 2a02:c207:3002:8283::1;
 deny 2a02:c207:3006:6498::1;
 deny 2a02:ec0:209:10::4;
-deny 2a02:ed06::222;
 deny 2a03:4000:15:928:dead:beef:ca1f:1337;
 deny 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 deny 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
