--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,7 +128,6 @@ deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
 deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
-deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
@@ -267,13 +266,13 @@ deny 2620:18c:0:192::148;
 deny 2620:18c:0:192::149;
 deny 2620:59:a000:9666:216:3eff:fe7d:dae8;
 deny 2620:7:6001::120;
-deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
 deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
+deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
