--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,9 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
-set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
@@ -39,7 +37,6 @@ set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.13.143;
-set_real_ip_from 107.172.31.146;
 set_real_ip_from 107.172.31.165;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.231.197;
@@ -152,6 +149,7 @@ set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
 set_real_ip_from 162.247.74.206;
+set_real_ip_from 162.247.74.213;
 set_real_ip_from 162.247.74.216;
 set_real_ip_from 162.247.74.217;
 set_real_ip_from 162.247.74.27;
@@ -208,7 +206,6 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
 set_real_ip_from 179.43.159.196;
@@ -222,7 +219,6 @@ set_real_ip_from 179.43.167.205;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -294,6 +290,7 @@ set_real_ip_from 185.195.71.8;
 set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
+set_real_ip_from 185.216.68.128;
 set_real_ip_from 185.220.100.240;
 set_real_ip_from 185.220.100.241;
 set_real_ip_from 185.220.100.242;
@@ -496,6 +493,7 @@ set_real_ip_from 185.230.162.218;
 set_real_ip_from 185.230.162.34;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
+set_real_ip_from 185.239.71.160;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
@@ -667,6 +665,7 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
+set_real_ip_from 198.98.48.192;
 set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
@@ -939,7 +938,6 @@ set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
-set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:4441::1;
 set_real_ip_from 2602:fc24:11:96f9::1;
@@ -1078,7 +1076,6 @@ set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::120;
-set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:1169:119:b120::;
@@ -1086,6 +1083,7 @@ set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
+set_real_ip_from 2a00:1728:3f::c0cc:80;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
@@ -1505,7 +1503,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.193.133.77;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.163;
@@ -1643,6 +1640,7 @@ set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
 set_real_ip_from 54.224.79.94;
+set_real_ip_from 54.225.81.26;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1691,7 +1689,6 @@ set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
@@ -1708,7 +1705,6 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
-set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
@@ -1803,7 +1799,6 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.112.22;
 set_real_ip_from 94.16.116.81;
-set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.37;
