Update lists at 20240325-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -145,7 +144,6 @@ allow 151.80.148.159;
 allow 152.53.35.204;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 155.4.102.252;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.247.72.192;
@@ -268,7 +266,6 @@ allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
-allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -488,6 +485,7 @@ allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
+allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
 allow 185.222.66.188;
@@ -617,7 +615,6 @@ allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
-allow 192.46.210.223;
 allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
@@ -808,7 +805,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
@@ -833,7 +829,6 @@ allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
 allow 205.185.121.170;
-allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 208.109.215.188;
@@ -919,7 +914,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -930,7 +924,6 @@ allow 23.184.48.224;
 allow 23.184.48.94;
 allow 23.94.211.25;
 allow 23.94.36.142;
-allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8100:400::9;
 allow 2.57.122.179;
@@ -941,12 +934,11 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2600:3c00:e000:4ee::3;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1092,6 +1084,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:5200::;
+allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1501,7 +1494,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 35.0.127.52;
-allow 35.171.39.70;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1572,6 +1564,7 @@ allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.83.31.10;
 allow 45.9.148.219;
+allow 45.9.150.103;
 allow 45.9.150.130;
 allow 45.92.1.74;
 allow 45.94.31.143;
@@ -1587,7 +1580,6 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.87.234;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1616,6 +1608,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.44.105.136;
 allow 5.255.100.151;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1688,6 +1681,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
+allow 79.102.188.223;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1833,5 +1827,4 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
-allow 96.42.26.63;
 allow 96.66.15.152;
