--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,22 +112,19 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-deny 2400:8904::f03c:93ff:fe68:23b3;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
-deny 2600:3c00:e000:4ee::3;
+deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
-deny 2600:3c03:e000:fa::3;
+deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -272,6 +269,7 @@ deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:5200::;
+deny 2a00:1169:11f:d680::;
 deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
