--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -262,7 +261,7 @@ set_real_ip_from 185.130.44.108;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
-set_real_ip_from 185.146.232.234;
+set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
@@ -656,6 +655,7 @@ set_real_ip_from 194.195.120.132;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.64;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.28.112.157;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
@@ -835,6 +835,7 @@ set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
+set_real_ip_from 206.237.98.52;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.32.198;
@@ -899,7 +900,6 @@ set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
-set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
 set_real_ip_from 23.154.177.18;
 set_real_ip_from 23.154.177.19;
@@ -918,6 +918,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
@@ -930,6 +931,7 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 23.94.36.142;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2404:8000:1025:602:776:e0fb:62bd:b8a8;
 set_real_ip_from 2.57.122.179;
 set_real_ip_from 2.57.122.215;
 set_real_ip_from 2.57.122.246;
@@ -938,11 +940,13 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.90;
+set_real_ip_from 2.58.95.45;
 set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1496,8 +1500,7 @@ set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
-set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.233.130.247;
+set_real_ip_from 34.239.41.1;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1585,6 +1588,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.182.21.250;
+set_real_ip_from 46.195.222.40;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1685,7 +1689,6 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.188.223;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1714,6 +1717,7 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
+set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
